--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+  --vh: 100vh;
+}
+
+body, #root {
+  height: var(--vh);
+}
+
 @keyframes blob {
   0% {
     transform: translate(0px, 0px) scale(1);
